--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.19",
     "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "rc-slider": "^11.1.9",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "uuid": "^13.0.0",
